klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/DoubleVersionAssociationErrorTest.klass
package dummy

association DoubleVersionAssociation
{
    source: ExampleSource[1..1] version owned;
    target: ExampleTarget[1..1] version owned;

    relationship this.id == ExampleTarget.id
}

class ExampleSource
{
    id: Long key;
}

class ExampleTarget
{
    id: Long key;
}
